# hyde

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  hyde-implementation-guide-additions.md  hyde-roadmap.md
crates/hyde/: Cargo.toml
crates/hyde-core/: CHANGELOG.md  Cargo.toml
crates/hyde-core/src/: backend.rs  cache.rs  context.rs  error.rs  lib.rs  passphrase.rs  pqc.rs  protected.rs  recovery.rs  security_level.rs  signing.rs
crates/hyde-macros/: Cargo.toml
crates/hyde-macros/src/: lib.rs
crates/hyde-software/: Cargo.toml
crates/hyde-software/src/: lib.rs
crates/hyde-tpm/: CHANGELOG.md  Cargo.toml  README.md
crates/hyde-tpm/benches/: tpm_seal_bench.rs
crates/hyde-tpm/examples/: pqc_demo.rs
crates/hyde-tpm/src/: lib.rs  pqc.rs  tss.rs
crates/hyde-tpm/tests/: independent_verify.rs  integration.rs
crates/hyde-wasm/: Cargo.toml
crates/hyde-wasm/src/: lib.rs
crates/hyde-wasm/tests/: smoke.cjs
crates/hyde/src/: lib.rs
crates/hyde/tests/: integration.rs
crates/veil/: Cargo.toml
crates/veil-core/: Cargo.toml
crates/veil-core/src/: backend.rs  context.rs  error.rs  lib.rs  passphrase.rs  protected.rs
crates/veil-macros/: Cargo.toml
crates/veil-macros/src/: lib.rs
crates/veil-software/: Cargo.toml
crates/veil-software/src/: lib.rs
crates/veil-tpm/: Cargo.toml
crates/veil-tpm/src/: lib.rs
crates/veil-tpm/tests/: integration.rs
crates/veil/src/: lib.rs
crates/veil/tests/: integration.rs
docs/: argo-design.md  competitive-landscape.md  hyde-implementation-guide.md  hyde-roadmap.md  veil-implementation-guide.md  veil-roadmap.md
docs/research/: macos-secure-enclave.md  windows-hello.md
examples/demo-app/: Cargo.toml  tauri.conf.json
examples/demo-app/src/: lib.rs  main.rs
examples/wasm-browser/: index.html
