[workspace]
resolver = "2"
members = [
    "crates/veil",
    "crates/veil-core",
    "crates/veil-tpm",
    "crates/veil-software",
    "crates/veil-macros",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://gitlab.com/Ryujiyasu/veil"
keywords = ["tee", "tpm", "encryption", "security", "hardware"]
categories = ["cryptography", "hardware-support"]
rust-version = "1.70"

[workspace.dependencies]
veil-tee-core = { path = "crates/veil-core", version = "0.1.0" }
veil-tee-tpm = { path = "crates/veil-tpm", version = "0.1.0" }
veil-tee-software = { path = "crates/veil-software", version = "0.1.0" }
veil-tee-macros = { path = "crates/veil-macros", version = "0.1.0" }
tss-esapi = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
