[workspace]
resolver = "2"
members = [
    "crates/hyde",
    "crates/hyde-core",
    "crates/hyde-tpm",
    "crates/hyde-software",
    "crates/hyde-macros",
    "crates/hyde-wasm",
]
exclude = [
    "examples/demo-app",
    "bench/fhe-zkp-feasibility",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://gitlab.com/Ryujiyasu/hyde"
keywords = ["tee", "tpm", "encryption", "security", "hardware"]
categories = ["cryptography", "hardware-support"]
rust-version = "1.74"

[workspace.dependencies]
hyde-core = { path = "crates/hyde-core", version = "0.1.1" }
hyde-tpm = { path = "crates/hyde-tpm", version = "0.2.0" }
hyde-software = { path = "crates/hyde-software", version = "0.1.0" }
hyde-macros = { path = "crates/hyde-macros", version = "0.1.0" }
tss-esapi = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
