[package]
name = "hyde-core"
description = "Core traits and types for Hyde TEE abstraction"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
zeroize.workspace = true
thiserror.workspace = true
tracing.workspace = true
aes-gcm = "0.10"
argon2 = "0.5"
getrandom = "0.2"
sha2 = "0.10"
ml-kem = { version = "0.2.3", features = ["zeroize"] }
ml-dsa = "0.1.0-rc.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Memory"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
