[package]
name = "hyde-software"
description = "Software-only fallback backend for Hyde (stub)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
hyde-core.workspace = true
tracing.workspace = true
