[package]
name = "hyde-tpm"
description = "TPM 2.0 backend for Hyde"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
hyde-core.workspace = true
tss-esapi.workspace = true
zeroize.workspace = true
tracing.workspace = true
aes-gcm = "0.10"

[[bench]]
name = "tpm_seal_bench"
harness = false
