[package]
name = "hyde-wasm"
description = "WASM bindings for Hyde (PQC layer + software backend)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hyde-core.workspace = true
hyde-software.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
