[package]
name = "hyde"
description = "Unified abstraction layer for hardware-based TEE in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[dependencies]
hyde-core.workspace = true
hyde-macros.workspace = true
tracing.workspace = true

[dependencies.hyde-tpm]
workspace = true
optional = true

[dependencies.hyde-software]
workspace = true
optional = true

[dev-dependencies]
serde_json.workspace = true
serde.workspace = true
zeroize.workspace = true

[features]
default = ["tpm"]
tpm = ["dep:hyde-tpm"]
software = ["dep:hyde-software"]
