[package]
name = "veil-core"
description = "Core traits and types for veil TEE abstraction"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
zeroize.workspace = true
thiserror.workspace = true
tracing.workspace = true
