[package]
name = "veil-tee-core"
description = "Core traits and types for veil TEE abstraction"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
zeroize.workspace = true
thiserror.workspace = true
tracing.workspace = true
aes-gcm = "0.10"
argon2 = "0.5"
getrandom = "0.2"
