[package]
name = "veil-tee-software"
description = "Software-only fallback backend for veil (stub)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
veil-tee-core.workspace = true
tracing.workspace = true
