[package]
name = "veil-tpm"
description = "TPM 2.0 backend for veil"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
veil-core.workspace = true
tss-esapi.workspace = true
zeroize.workspace = true
tracing.workspace = true
aes-gcm = "0.10"
argon2 = "0.5"
getrandom = "0.2"
