[package]
name = "veil-tee"
description = "Unified abstraction layer for hardware-based TEE in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[dependencies]
veil-tee-core.workspace = true
veil-tee-macros.workspace = true
tracing.workspace = true

[dependencies.veil-tee-tpm]
workspace = true
optional = true

[dependencies.veil-tee-software]
workspace = true
optional = true

[dev-dependencies]
serde_json.workspace = true
serde.workspace = true
zeroize.workspace = true

[features]
default = ["tpm"]
tpm = ["dep:veil-tee-tpm"]
software = ["dep:veil-tee-software"]
