[package]
name = "hyde-demo"
version = "0.1.0"
description = "Hyde TEE Protection Visualizer"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "hyde_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
hyde-core = { path = "../../crates/hyde-core" }
hyde-tpm = { path = "../../crates/hyde-tpm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2" }
tauri-plugin-log = "2"
log = "0.4"
